removed flask code

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LINN THORESEN – design portfolio</title>
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <!-- STATISK PATH -->
+    <link rel="stylesheet" href="static/css/style.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+
 
 <!-- NAVN -->
 <header class="hero">
@@ -65,7 +68,8 @@
 
         <div class="project-image">
             <a href="https://github.uio.no/IN2000-V25/team-28" target="_blank">
-                <img src="{{ url_for('static', filename='images/portfolioposter.png') }}" alt="VAFF Vær App">
+                <img src="static/images/portfolioposter.png" alt="Vaff Vær App">
+
             </a>
         </div>
     </div>
@@ -115,7 +119,7 @@
 
         <div class="project-image">
             <a href="https://github.com/linnt03/CloudChase" target="_blank">
-                <img src="{{ url_for('static', filename='images/cloudposter.png') }}" alt="CloudChase">
+                <img src="static/images/cloudposter.png" alt="CloudChase">
             </a>
         </div>
     </div>
@@ -135,13 +139,13 @@
 
     <div class="figma-gallery">
         <a href="https://www.figma.com/proto/UXEgCcEaIJdI4d5LxZv5kt/2662-Screen-Interfaces-hyaptia?node-id=1-157&p=f&t=UTZPTKlgDd4CtnKs-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A157&show-proto-sidebar=1" target="_blank">
-            <img src="{{ url_for('static', filename='images/hypatiapreview.png') }}">
+            <img src="static/images/hypatiapreview.png">
         </a>
         <a href="https://www.figma.com/proto/JiikFFH0JDAmB54Lph2B81/offline-timeline-blog?node-id=1-2&p=f&t=sUSfy1lAJhh5kXey-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1" target="_blank">
-            <img src="{{ url_for('static', filename='images/reconnectpreview.png') }}">
+            <img src="static/images/reconnectpreview.png">
         </a>
         <a href="https://www.figma.com/proto/rOrBgcApelg5CRQyci2138/tequila?node-id=14-3&p=f&t=dgJi9EF7ThrckzXS-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=14%3A3&show-proto-sidebar=1" target="_blank">
-            <img src="{{ url_for('static', filename='images/tequilapreview.png') }}">
+            <img src="static/images/tequilapreview.png">
         </a>
     </div>
 
