--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>LINN THORESEN – design portfolio</title>
 
     <!-- STATISK PATH -->
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="./static/css/style.css?v=4">
+
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
