--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <p class="subtitle">design portfolio</p>
 </header>
 
+<!-- 3D BOKHYLLE (PLASSHOLDER) -->
+<div class="bookshelf-placeholder">
+</div>
+
+<div class="divider"></div>
 
 <!-- APP DESIGN 1 VAFF -->
 <section class="project">
