--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <!-- APP DESIGN 2 CLOUDCHASE -->
 <section class="project">
-    <h2 class="project-title">APP DESIGN : CloudChase</h2>
+    <h2 class="project-title">NETTSIDE DESIGN : CloudChase</h2>
     <p class="project-tagline">HTML - Python - CSS - Adobe Programmer</p>
 
     <div class="project-content">
