--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LINN THORESEN – design portfolio</title>
+    <title>LINN THORESEN – design portfolio (work in progress)</title>
 
     <!-- STATISK PATH -->
     <link rel="stylesheet" href="./static/css/style.css?v=4">
