--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LINN THORESEN – design portfolio (work in progress)</title>
+    <title>LINN THORESEN – design portfolio </title>
 
     <!-- STATISK PATH -->
     <link rel="stylesheet" href="./static/css/style.css?v=4">
@@ -20,7 +20,8 @@
 <!-- NAVN -->
 <header class="hero">
     <h1>LINN THORESEN</h1>
-    <p class="subtitle">design portfolio</p>
+    <p class="subtitle">design portfolio (work in progress...)</p>
+    <a href="static/images/LinnCV.png" target="_blank">Åpne CV</a>
 </header>
 
 
